--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   ],
   "devDependencies": {
     "browserify": "~4.2.0",
-    "chai": "^1.9.1",
+    "chai": "~1.9.1",
     "mocha": "~1.20.0",
     "os-shim": "~0.1.2",
     "semver": "~2.2.1",
